--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-native": "0.72.3",
     "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-reanimated": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.23.0"
+    "react-native-screens": "^3.23.0",
+    "react-native-snap-carousel": "apurba-bware/react-native-snap-carousel#5a7f809e921262e4e2f646e8cfc4da85f7bd663d"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,6 +31,7 @@
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
