--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@types/currency-formatter": "^1.5.1",
     "axios": "^1.4.0",
+    "currency-formatter": "^1.5.9",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-config": "^1.5.1",
