--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.72.3",
     "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-linear-gradient": "^2.8.1",
     "react-native-reanimated": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
